# DocumentRefiner

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  fragment_main_auto.xml  fragment_main_core.xml  fragment_main_corrected.xml  fragment_main_root.xml  fragment_main_tensorflow.xml  fragment_main_ui.xml
app/src/main/res/menu/: main_auto.xml
app/src/main/res/navigation/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
documentrefiner-core/: build.gradle  consumer-rules.pro
documentrefiner-core/src/main/cpp/: DocumentDetector.hpp  DocumentDetectorCanny.hpp  DocumentDetectorDelegated.hpp  DocumentRefiner.hpp  DocumentRefinerRGB565.h  DocumentRefinerRGBA.hpp  core.cpp
documentskewcorrection-core/: .gitignore  README.md  build.gradle  consumer-rules.pro  pom.properties
documentskewcorrection-core/src/main/cpp/: CMakeLists.txt  DocumentSkewCorrector.hpp  DocumentSkewCorrectorRGB565.h  DocumentSkewCorrectorRGBA.hpp  DocumentSkewDetector.hpp  DocumentSkewDetectorCanny.hpp  DocumentSkewDetectorDelegated.hpp  core.cpp
documentskewcorrection-fusion/: README.md  build.gradle  pom.properties
documentskewcorrection-hms/: README.md  build.gradle  consumer-rules.pro  pom.properties
documentskewcorrection-tensorflow/: README.md  build.gradle  pom.properties
documentskewcorrection-ui/: README.md  build.gradle  pom.properties
documentskewcorrection-ui/src/main/res/values/: attrs.xml
(+57 files in other folders)
